--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="hint_email">Digite o seu email</string>
     <string name="hint_senha">Digite a sua senha</string>
     <string name="criar_conta">Não tem conta? crie uma!</string>
+    <string name="title_activity_home">Map</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDI185i5SazsVPakbOY5j9u4UMZeeIQnog</string>
+
 
 
 </resources>
